[metadata]
name = tslogs
version = file: tslogs/_version.txt
author = Ashutosh Varma
author-email = ashutoshvarma11@live.com
home-page = https://github.com/ashutoshvarma/tslogs
description = ThrottleStop logs parsers and visualizer.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = throttlestop, logs, convert, parse
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/ashutoshvarma/tslogs/issues
    # Changelog = https://tslogs.readthedocs.io/en/latest/changes.html
    # Documentation = https://tslogs.readthedocs.io/en/latest/

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages =
    tslogs
test_suite = tests
setup_requires =
    setuptools
install_requires =
    matplotlib >=3.3.2
    # fastobo ~=0.9.0
#     networkx ~=2.3
#     python-dateutil ~=2.8
test_requires = 
    pytest >= 6.1.1


[options.entry_points]
console_scripts =
    tslogs = tslogs.__main__:main

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203
